--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,6 @@
         </div>
     </div>
 
-   <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
